# hdrfix

./: .gitignore  Cargo.toml  build.rs  readme.md  sunrise.bat  test-aces.bat  test.bat  test.sh  watch.bat
jxrlib/: Makefile  libjxr.pc.in  license.json
jxrlib/doc/: readme.txt
jxrlib/image/decode/: JXRTranscode.c  segdec.c  strdec.c
jxrlib/image/sys/: ansi.h  strcodec.c  strcodec.h  windowsmediaphoto.h  xplatform_image.h
jxrlib/image/vc11projects/: CommonLib_vc11.vcxproj  DecodeLib_vc11.vcxproj  EncodeLib_vc11.vcxproj
jxrlib/image/vc12projects/: CommonLib_vc12.vcxproj  DecodeLib_vc12.vcxproj  EncodeLib_vc12.vcxproj
jxrlib/image/vc14projects/: CommonLib_vc14.vcxproj  DecodeLib_vc14.vcxproj  EncodeLib_vc14.vcxproj
jxrlib/jxrencoderdecoder/: JXRDec420.c  JXRDec420_vc11.vcxproj  JXRDec420_vc12.vcxproj  JXRDec420_vc14.vcxproj  JXRDecApp_vc11.vcxproj  JXRDecApp_vc12.vcxproj  JXRDecApp_vc14.vcxproj  JXREnc420_vc11.vcxproj  JXREnc420_vc12.vcxproj  JXREnc420_vc14.vcxproj  JXREncApp_vc11.vcxproj  JXREncApp_vc12.vcxproj  JXREncApp_vc14.vcxproj  JXR_vc11.sln  JXR_vc12.sln  JXR_vc14.sln  JxrEnc420.c
jxrlib/jxrgluelib/: JXRGlue.c  JXRGlue.h  JXRGlueJxr.c  JXRGlueLib_vc11.vcxproj  JXRGlueLib_vc12.vcxproj  JXRGlueLib_vc14.vcxproj  JXRGluePFC.c  JXRMeta.h
jxrlib/jxrtestlib/: JXRTest.c  JXRTest.h  JXRTestBmp.c  JXRTestHdr.c  JXRTestLib_vc11.vcxproj  JXRTestLib_vc12.vcxproj  JXRTestLib_vc14.vcxproj  JXRTestPnm.c  JXRTestTif.c  JXRTestYUV.c
src/: colormap.rs  error.rs  histogram.rs  io.rs  jpegxr.rs  jpegxr_sys.rs  lib.rs  main.rs  pixelbuffer.rs  tonemap.rs  transforms.rs
