[package]
name = "hdrfix"
version = "0.1.0"
authors = ["Brion Vibber <brion@pobox.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# For the CLI util
# todo: make optional
jpegxr = "0.2.1"
png = "0.16.8"
clap = "2.33.3"
mtpng = "0.3.5"
time = "0.2.26"
notify = "4.0.16"
image = "0.23.14"
mozjpeg = "0.9.0"

# For the actual conversion code
glam = "0.14.0"
thiserror = "1.0"
rayon = "1.5.0"
oklab = "1.0.0"
