[package]
name = "hdrfix"
version = "1.0.0"
authors = ["Brion Vibber <brion@pobox.com>"]
edition = "2018"
description = "A tool for mapping HDR screenshots to SDR"
readme = "readme.md"
homepage = "https://github.com/brion/hdrfix"
repository = "https://github.com/brion/hdrfix.git"
license = "MIT"
keywords = ["jxr", "jpegxr", "jpeg-xr", "hdr"]
categories = ["command-line-utilities", "multimedia::images"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# For the CLI util
# todo: make optional
jpegxr = "0.2.1"
png = "0.17.1"
clap = "2.33.3"
mtpng = "0.3.5"
time = "0.3.2"
notify = "4.0.16"
image = "0.23.14"
mozjpeg = "0.9.0"

# For the actual conversion code
glam = "0.18.0"
thiserror = "1.0"
rayon = "1.5.0"
oklab = "1.0.0"
half = { version = "1.7.1", features = [ "std", "num-traits" ] }
